--- a/index.html
+++ b/index.html
@@ -5,7 +5,202 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
+    <header>
+      <section>
+        <img src="img/logo/220x47" alt="logo-top">
+        <p>Поиск</p>
+        <p>Закладки</p>
+        <p>Корзина</p>
+        <p>Оформить заказ</p>
+      </section>
+      <section>
+        <p><i>Интернет-магазин<br>
+        строительных материалов <br>
+        и инструментов для ремонта</i></p>
+        <p>+7(812)555-05-55</p>
+        <p>г.Санкт-Петербург, ул.Б.Конюшенная, д.19/8</p>
+        <p>Войти</p>
+        <p>Регистрация</p>
+      </section>
+      <nav>
+        <ul>
+          <li>Главная</li>
+          <li>Компания</li>
+          <li>Каталог</li>
+          <li>Новости</li>
+          <li>Спецпредложения</li>
+          <li>Доставка</li>
+          <li>Контакты</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <div>
+          <h3>Материалы</h3>
+          <p>На любой вкус</p>
+          <img src="50x50">
+        </div>
+        <div>
+          <h3>Инструмент</h3>
+          <p>На все случаи</p>
+          <img src="50x50">
+        </div>
+        <div>
+          <h3>Техника</h3>
+          <p>для стройки</p>
+          <img src="50x50">
+        </div>
+        <div>
+          <h3>Скидки 50%</h3>
+          <p>на 350 товаров</p>
+          <img src="50x50">
+        </div>
+        <div>
+          <h3>Доставка</h3>
+          <p>Бесплатно</p>
+          <img src="50x50">
+        </div>
+        <div>
+          <h1>Перфораторы</h1>
+          <p>Настоящие мужские игрушки</p>
+          <img src="200x150">
+        </div>
+        <div>
+          <div>
+            <h1>Дрели</h1>
+            <p>Соседям на радость</p>
+            <img src="200x150">
+          </div>
+        </div>
+       </section>
+       <section>
+         <h2>Популярные товары</h2>
+         <p>Все популярные товары</p>
+        <ul>
+          <li>
+            <img src="70x50">
+            <p>Перфоратор Bosch <br>
+            BFG 9000</p>
+            <p>32500 Р.</p>
+            <p>25500 h/</p>
+          </li>
+          <li>
+            <img src="70x50">
+            <p>Перфоратор Bosch <br>
+            BFG 3000</p>
+            <p>22500 Р.</p>
+            <p>51500 h/</p>
+          </li>
+          <li>
+            <img src="70x50">
+            <p>Перфоратор Bosch <br>
+            BFG 6000</p>
+            <p>30500 Р.</p>
+            <p>25500 h/</p>
+          </li>
+          <li>
+            <img src="70x50">
+            <p>Перфоратор Bosch <br>
+            BFG 2000</p>
+            <p>22500 Р.</p>
+            <p>15500 h/</p>
+          </li>
+        </ul>
+       </section>
+       <section>
+         <h2>Популярные производители</h2>
+         <p>все производители</p>
+         <table>
+           <tr>
+             <td>Bosch</td>
+             <td>Makita</td>
+             <td>DeWalt</td>
+             <td>Интерскол</td>
+           </tr>
+           <tr>
+            <td>Hitachi</td>
+            <td>LG</td>
+            <td>AEG</td>
+            <td>Metabo</td>
+          </tr>
+         </table>
+       </section>
+       <section>
+         <h2>Сервисы</h2>
+         <p>Хороший интернет-магазин отличатеся от плохо не только ценами! <br>
+        Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными</p>
 
+        <table>
+          <td>Доставка</td>
+          <td>Гарантия</td>
+          <td>КРедит</td>
+        </table>
+         <span>
+           <p>Мы с удоволсьтвием доставим ваш товар прямо <br>
+          к вашему подъезду совершенно бесплатно!<br>
+        Ведь мы неплохо заработаем, <br>
+      поднимая его на ваш этаж!</p>
+         </span>
+         <img src="200x200" alt="car">
+       </section>
+       <article>
+         <h2>Компания "Техномарт"</h2>
+         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров дляремонта и 
+           строительства не оставит равнодушными любителей сэкономить на гастарайтерах.
+         </p>
+         <p>Мы можем доставить ваш товар в самые отдаленные
+           точки России! <br>
+           Техномарт работает со многими транспортными компаниями:
+           <ul>
+             <li>Деловые линии</li>
+             <li>Автотрейдинг</li>
+             <li>ЖелДорЭкспедиция</li>
+           </ul>
+         </p>
+       </article>
+       <div>
+         <h2>Контакты</h2>
+         <p>Вы можете забрать товар сами, заехав в наш офис:
+          </p>
+          <img src="150x150" alt="map">
+       </div>
+    </main>
+      <footer>
+      <img src="logo/220x47">
+      <p>г.Санкт0Петербурк, ул. Б.Конюшенная, д.19/8 <br>
+      +7(812)555-05-55</p>
+      <nav>
+        <ul>
+          <li>Компания</li>
+          <li>Новости</li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li>Доставка</li>
+          <li>Контакты</li>
+        </ul>
+        <ul>
+          <li>Материалы</li>
+          <li>Техника</li>
+          <li>Инструмент</li>
+          <li>Спецпредложения</li>
+        </ul>
+      </nav>
+      <section>
+        <p>2010-2019 Компания "техномарт" <br>
+          Все права защищены
+        </p>
+        <nav>
+          <img src="20x20" alt="vk">
+          <img src="20x20"alt="fb">
+          <img src="20x20" alt="inst">
+        </nav>
+        <p>Обратная связь:</p>
+        <a href="htmlacademy">mail@htmlacademy.ru</a>
+        <p>разработано</p>
+        <a href="htmlacademy">htmkacademy.ru</a>
+      </section>
+
+    </footer>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
   </body>
