--- a/catalog.html
+++ b/catalog.html
@@ -6,20 +6,32 @@
   </head>
   <body>
     <header>
-      <section>
-        <img src="img/logo/220x47" alt="logo-top">
-        <p>Поиск</p>
-        <p>Закладки</p>
-        <p>Корзина</p>
-        <p>Оформить заказ</p>
-      </section>
+      <a class="logo" href="#">ТЕХНОМАРТ</a>
+      <form action="#" method="post">
+        <label for="search-form" >Поиск:</label>
+        <input id="search-form" type="search" name="search" placeholder="Поиск:"> 
+            <button type="submit" id="submit">
+                <img src="img/icon-search.png" width="17" height="17" alt="Search">
+            </button>
+    </form>
+      <ul class="user-menu">
+        <li>
+          <a href="#"><img src="img/icon-bookmark.png" width="14px" height="15,58px" alt="Bookmark">Закладки</a>
+        </li>
+        <li>
+          <a href="#"><img src="img/icon-cart.png" width="15px" height="15px" alt="cart">Корзина: 10</a>
+        </li>
+        <li>
+          <a href="#">Оформить заказ</a>
+        </li>
+      </ul>
       <section>
         <p><i>Интернет-магазин<br>
         строительных материалов <br>
         и инструментов для ремонта</i></p>
-        <p>+7(812)555-05-55</p>
+        <p><img src="img/phone.png" width="17,51px" height="18,97px" alt="Phone">+7(812)555-05-55</p>
         <p>г.Санкт-Петербург, ул.Б.Конюшенная, д.19/8</p>
-        <p>Равшан Джамшутович</p>
+        <img src="img/shape.png" width="20" height="18" alt="user"><p>Равшан Джамшутович</p>
         <ul>
             <li>Мои заказы</li>
             <li>Личный кабинет</li>
@@ -41,7 +53,7 @@
       <section>
           <nav>
               <ul>
-                  <li><img src="10x10" alt="home"></li>
+                  <li><img src="img/icon-home.png" width="13,98px" height="12px" alt="home"></li>
                   <li>Каталог</li>
                   <li>Инструмент</li>
                   <li>Перфораторы</li>
@@ -49,63 +61,64 @@
           </nav>
       </section>
       <h1>Перфораторы</h1>
-      <table>
-          <tr>
-              <td>
-                <img src="40x40" alt="BFG6000">
+      <div>
+          <ul>
+              <li>
+                <img src="img/bosch 6000 catalog.jpg" width="144px" height="128px" alt="BFG6000">
                  <p>Перфоратор BOSCH BFG 6000</p> 
                 <p>30500</p>
                 <p>25500 Р.</p>       
-              </td>
-              <td>
-                <img src="40x40" alt="BFG6000">
+              </li>
+              <li>
+                <img src="img/bosch 6000 catalog.jpg" width="144px" height="128px" alt="BFG6000">
                  <p>Перфоратор BOSCH BFG 6000</p> 
                 <p>30500</p>
                 <p>25500 Р.</p>       
-              </td><td>
+              </li>
+              <li>
                 <p>Купить</p>
                 <p>В закладки</p>
                  <p>Перфоратор BOSCH BFG 6000</p> 
                 <p>30500</p>
                 <p>25500 Р.</p>       
-              </td>
-          </tr>
-          <tr>
-            <td>
-                <img src="40x40" alt="BFG3000">
+              </li>
+              <li>
+                <img src="img/bosch 3000.jpg" width="127px" height="112px" alt="BFG3000">
                  <p>Перфоратор BOSCH BFG 3000</p> 
                 <p>22500</p>
                 <p>15500 Р.</p>       
-              </td><td>
-                <img src="40x40" alt="BFG6000">
+              </li>
+              <li>
+                <img src="img/bosch 6000 catalog.jpg" width="144px" height="128px" alt="BFG6000">
                  <p>Перфоратор BOSCH BFG 6000</p> 
                 <p>30500</p>
                 <p>25500 Р.</p>       
-              </td><td>
-                <img src="40x40" alt="BFG2000">
+              </li>
+              <li>
+                <img src="img/bosch 2000.jpg" width="127px" height="112px" alt="BFG2000">
                  <p>Перфоратор BOSCH BFG 2000</p> 
                  <p>12500 Р.</p>       
-              </td>
-        </tr>
-        <tr>
-            <td>
-                <img src="40x40" alt="BFG3000">
+              </li>
+              <li>                
+                <img src="img/bosch 3000.jpg" width="127px" height="112px" alt="BFG3000">
                  <p>Перфоратор BOSCH BFG 3000</p> 
                 <p>22500</p>
                 <p>15500 Р.</p>       
-              </td><td>
-                <img src="40x40" alt="BFG6000">
+              </li>
+              <li>
+                <img src="img/bosch 6000 catalog.jpg" width="144px" height="128px" alt="BFG6000">
                  <p>Перфоратор BOSCH BFG 6000</p> 
                 <p>30500</p>
                 <p>25500 Р.</p>       
-              </td><td>
-                <img src="40x40" alt="BFG6000">
+              </li>
+              <li>
+                <img src="img/bosch 6000 catalog.jpg" width="144px" height="128px"alt="BFG6000">
                  <p>Перфоратор BOSCH BFG 6000</p> 
                 <p>30500</p>
                 <p>25500 Р.</p>       
-              </td>
-        </tr>
-      </table>
+              </li>li>
+        </ul>
+      </div>
       <ul>
           <li>1</li>
           <li>2</li>
@@ -115,16 +128,16 @@
     <aside>
         <p>Цена:</p>
         <ul>Производители
-            <li>Bosch</li>
-            <li>Интерскол</li>
-            <li>Makita</li>
-            <li>Dewalt</li>
-            <li>Hitachi</li>
+          <li><label for="bosch"><input type="checkbox" class="checkbox visually-hidden" name="brand-name" id="bosch" checked>Bosch</label></li>
+          <li><label for="interskol"><input type="checkbox" class="checkbox visually-hidden" name="brand-name" id="interskol">ИНТЕРСКОЛ</label></li>
+          <li><label for="makita"><input type="checkbox" class="checkbox visually-hidden" name="brand-name" id="makita" checked>Makita</label></li>
+          <li><label for="dewalt"><input type="checkbox" class="checkbox visually-hidden" name="brand-name" id="dewalt">DeWalt</label></li>
+          <li><label for="hitachi"><input type="checkbox" class="checkbox visually-hidden" name="brand-name" id="hitachi">Hitachi</label></li>
         </ul>
-        <p>Питание:</p>
+        <h3>Питание:</h3>
         <ul>
-            <li>Аккумуляторные</li>
-            <li>Сетевые</li>
+          <li><label for="battery"><input type="radio" id="battery" name="energy" value="battery-item" checked>Аккумуляторные</label></li>
+          <li><label for="electricity"><input type="radio" id="electricity" name="energy" value="electricity-item">Сетевые</label></li>
         </ul>
     </aside>
     <article>
